{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 34,
  "lineage": "dccb717f-ff8e-2027-ebeb-f798424b6301",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fazle-aws_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025e46f52a4087ab7",
            "association_id": "eipassoc-0e5c3a1b401291152",
            "domain": "vpc",
            "id": "eipalloc-025e46f52a4087ab7",
            "instance": "i-061636033aab5ffb7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-066d2f093e3fa6e73",
            "private_dns": "ip-192-168-0-25.ec2.internal",
            "private_ip": "192.168.0.25",
            "public_dns": "ec2-3-229-158-42.compute-1.amazonaws.com",
            "public_ip": "3.229.158.42",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fazle_ec2_pub",
            "aws_internet_gateway.fazle_IGW",
            "aws_security_group.fazle_SG_EC2",
            "aws_subnet.Public_Sub",
            "aws_vpc.fazle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fazle_ec2_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:430704357939:instance/i-061636033aab5ffb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061636033aab5ffb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066d2f093e3fa6e73",
            "private_dns": "ip-192-168-0-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.25",
            "public_ip": "34.236.134.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f0b85e46aa94b0f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066a5e68db007e9d1",
            "tags": {
              "Name": "fazle_ec2_pub",
              "Owner": "fazle"
            },
            "tags_all": {
              "Name": "fazle_ec2_pub",
              "Owner": "fazle"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08baa0faf9f764614"
            ]
          },
          "dependencies": [
            "aws_security_group.fazle_SG_EC2",
            "aws_subnet.Public_Sub",
            "aws_vpc.fazle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fazle_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:internet-gateway/igw-0a76402bcfd04814b",
            "id": "igw-0a76402bcfd04814b",
            "owner_id": "430704357939",
            "tags": {
              "Name": "fazle_IGW",
              "Owner": "fazle"
            },
            "tags_all": {
              "Name": "fazle_IGW",
              "Owner": "fazle"
            },
            "vpc_id": "vpc-0ab1e4f9edf0e3766"
          },
          "dependencies": [
            "aws_vpc.fazle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:route-table/rtb-06d69e8a81e5c03f9",
            "id": "rtb-06d69e8a81e5c03f9",
            "owner_id": "430704357939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a76402bcfd04814b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fazle_RT",
              "Owner": "fazle"
            },
            "tags_all": {
              "Name": "fazle_RT",
              "Owner": "fazle"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab1e4f9edf0e3766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fazle_IGW",
            "aws_vpc.fazle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRT_Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dd28f7fcb024c50",
            "route_table_id": "rtb-06d69e8a81e5c03f9",
            "subnet_id": "subnet-066a5e68db007e9d1"
          },
          "dependencies": [
            "aws_internet_gateway.fazle_IGW",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_Sub",
            "aws_vpc.fazle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fazle_SG_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:security-group/sg-08baa0faf9f764614",
            "description": "Security Group for my EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08baa0faf9f764614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fazle_SG_EC2",
            "name_prefix": "",
            "owner_id": "430704357939",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fazle_SG_EC2"
            },
            "tags_all": {
              "Name": "fazle_SG_EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab1e4f9edf0e3766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fazle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:subnet/subnet-066a5e68db007e9d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066a5e68db007e9d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430704357939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fazle_subnet",
              "Owner": "fazle"
            },
            "tags_all": {
              "Name": "fazle_subnet",
              "Owner": "fazle"
            },
            "vpc_id": "vpc-0ab1e4f9edf0e3766"
          },
          "dependencies": [
            "aws_vpc.fazle_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fazle_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:vpc/vpc-0ab1e4f9edf0e3766",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0902a7e51bba8b391",
            "default_route_table_id": "rtb-02e67f8ab80848c16",
            "default_security_group_id": "sg-0b727a4f665b18aa5",
            "dhcp_options_id": "dopt-0b9ceb20cd0988fd9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab1e4f9edf0e3766",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e67f8ab80848c16",
            "owner_id": "430704357939",
            "tags": {
              "Name": "fazle_vpc",
              "Owner": "fazle"
            },
            "tags_all": {
              "Name": "fazle_vpc",
              "Owner": "fazle"
            }
          }
        }
      ]
    }
  ]
}